Fix spacing between btn divs

--- a/calculator.css
+++ b/calculator.css
@@ -1,16 +1,11 @@
 
-body {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background-color: rgb(245, 238, 220)
-
-}
 
 #container{
+  position: center;
   margin-top: 15px;
-  display: flex;
+  display: block;
+  right: 50%;
+  left: 50%;
   flex-direction: column;
   align-items: center;
   justify-content: start;
@@ -24,20 +19,18 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 30px;
-  
-  height: 550px;
-  width: 425px;
+  height: 300px;
+  width: 225px;
   background-color: rgb(255, 204, 217);
   border: solid 2px rgb(222, 88, 111);
   border-radius: 15px; 
-  padding: 10px;
+  padding: 5px;
 }
 
 .display-container {
   margin: 10px;
-  height: 50px;
-  width: 350px;
+  height: 25px;
+  width: 150px;
   background-color: #e7e7e7;
   border-top-left-radius: 15px;
   border-top-right-radius:15px;
@@ -52,32 +45,32 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  gap: 20px;
-  height: 350px;
-  width: 350px;
+  height: 260px;
+  width: 200px;
   padding: 5px;
-  background-color: aqua;
+  background-color: white;
 }
 
 .left-button-container {
   margin-top: 10px;
   display: flex;
   flex-direction: column;
-  height: 300px;
-  width: 200px;
-  gap: 10px;
+  
   
 }
 .right-button-container {
+  padding-top: 2px;
+  gap: 0.5px;
+  display:flex;
   margin-top: 10px;
-  height: 300px;
-  width: 100px;
+  flex-direction: column;
+  justify-content: start;
+  align-items: start;
   background-color: blue;
 
 }
 .right-button {
   margin: 2px;
-  margin-top: 4px;
   height: 40px;
   width: 40px;
   border-radius: 3px;
@@ -85,8 +78,8 @@ body {
 }
 .top-button-container {
   display: flex;
-  height: 50px;
-  width: 200px;
+  justify-content: start ;
+  align-items: start;
   background-color: red;
 }
 .top-btn {
@@ -110,18 +103,20 @@ body {
 .number-button-container {
   display: flex;
   flex-direction: column;
-  height: 200px;
-  width: 200px;
+  justify-content: start;
+  align-items: end;
   background-color: blueviolet;
 }
 .row-one{
   display: flex;
   flex-direction: row;
+  align-items: start;
 
 }
 .row-two{
   display: flex;
   flex-direction: row;
+  justify-content: start;
 }
 .row-three {
   display: flex;
